# ansim

./: 2차스프린트_다국어_핸드오프.md  3차스프린트_주간리포트_핸드오프.md  4차스프린트_홈_어르신_공지_핸드오프.md  5차스프린트_보호자채널_AI분류_핸드오프.md  6차스프린트_식단표_일정표_핸드오프.md  7차스프린트_앨범_핸드오프.md  8차스프린트_문의답변_핸드오프.md  README.md  README_backup(260531).md  README_original.md  UX_미세조정_패치_v1.md  docker-compose.yml  index.html  ngrok_연결_가이드.md  render.yaml  setup.sh  개발_핸드오프_문서_v3.md  로그인전환링크_패치_v1.md
Backend/: .env.example  .env_original  .gitignore  README.md  check_pw.py  insert_photos.py  migrate_sprint8.py  openapi_check.json  pyproject.toml  requirements.txt  restore_users.sql  run.err  server_err.txt  server_log.txt  test_api.py  test_login.py  uv8001_err.txt  uv_err.txt  uvicorn.err  uvicorn_debug.err  uvicorn_err.txt
Backend/app/: main.py
Backend/app/core/: config.py  deps.py  permissions.py  security.py
Backend/app/db/: demo_data.sql  init_db.sql  migrate_sprint3_8.sql  session.py  startup.py
Backend/app/db/extracted/: 003_reports.sql  (+3 more)
Backend/app/models/: __init__.py  album.py  board.py  inquiry.py  meal_schedule.py  models.py  report.py
Backend/app/routers/: albums.py  auth.py  board.py  home.py  inquiries.py  meals.py  notices.py  parent.py  programs.py  reports.py  residents.py  schedule.py  uploads.py  users.py
Backend/app/schemas/: album.py  auth.py  board.py  home.py  inquiries.py  meal.py  notices.py  parent.py  programs.py  reports.py  residents.py  schedule.py  users.py
Backend/app/services/: classification_service.py  file_service.py  gemini_retry.py  gemini_service.py  report_service.py
(+107 files in other folders)
